removed docs and added dist, using fixed position for body for vertical correcctions on mobile

--- a/style/main.style.scss
+++ b/style/main.style.scss
@@ -5,11 +5,14 @@
 @import '../node_modules/bootstrap/scss/reboot';
 
 body {
-  position: relative;
+  display: block;
+  position: fixed;
   margin:0;
   padding: 0;
   max-width: 100vw;
   min-width: 100vw;
+  width: 100vw;
+  height: 100vh;
   max-height: 100vh;
   overflow-y: hidden;
 }
